# autochapter

./: Battleplan.md  README.md  docker-compose.yml  pyproject.toml
autochapter/: config.py  main.py  models.py  schemas.py
migrations/main/: 1_vector.py  2_20240316170913_update.py  3_vector_index.py
pgvector/: Dockerfile
